--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@material-ui/styles": "^4.5.2",
     "@microsoft/signalr": "^3.0.0",
     "@types/bcryptjs": "^2.4.2",
-    "@types/jest": "24.0.21",
+    "@types/jest": "^24.0.23",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "12.12.3",
     "@types/react": "16.9.11",
@@ -23,10 +23,12 @@
     "material-ui-popup-state": "^1.4.1",
     "notistack": "^0.9.6",
     "react": "^16.12.0",
-    "react-dom": "^16.11.0",
+    "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
     "react-star-rating-component": "^1.4.1",
+    "react-test-renderer": "^16.12.0",
     "signalr": "^2.4.1",
+    "ts-jest": "^24.2.0",
     "typescript": "^3.7.2",
     "unstated-next": "^1.1.0",
     "yup": "^0.27.0"
